<resources>
    <string name="app_name">AndroidDeynenko3.3.1</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="point">.</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equally">=</string>
    <string name="percent">%</string>
    <string name="restart">C</string>
    <string name="minus_plus">+/-</string>
    <string name="calc">Переключить калькулятор</string>
    <string name="one_x">1/x</string>
    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="msplus">MC+</string>
    <string name="msminus">MC-</string>
    <string name="but">But</string>
    <string name="sqrt">sqrt</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>


</resources>
